# agents

./: .clang-format  .gitignore  .vpython3  LICENSE  README.md  mcp_config.json  plugin.json
.github/workflows/: ci.yml
common/: PRESUBMIT.py  gemini_helpers.py  gemini_helpers_unittest.py  tempfile_ext.py  tempfile_ext_unittest.py
extensions/: README.md  install.py  install_unittest.py
extensions/ecma262/: README.md  ecma262.js  gemini-extension.json  server.py  test_server.py
extensions/ecma262_state_machine/: README.md  gemini-extension.json  server.py  test_server.py
extensions/example-server/: README.md  server.py
extensions/v8-utils/: LICENSE  README.md  pyproject.toml  run-v8-mcp.sh
extensions/v8-utils/hooks/: pre-commit
extensions/v8-utils/skills/v8-perf/: system-prompt.md
extensions/v8-utils/src/v8_utils/: cas_api.py  changelog.py  chat.py  config.py  daemon.py  gerrit.py  jsb.py  lv.py  mcp_tools.py  perf.py  pinpoint.py  pinpoint_cache.py  pp.py  rbe.proto  rbe_pb2.py  server.py  tools.py  v8log.py  vt.py  worktree.py
extensions/v8-utils/src/v8_utils/pd/: __init__.py  adaptor.py  cli.py  commits.py  compare.py  detect.py  engines.py  models.py  refine.py  report.py  stats.py
extensions/v8-utils/src/v8_utils/pd/adaptors/: skiz.py
extensions/v8-utils/tests/: test_daemon.py  test_jsb.py  test_pinpoint_cache.py  test_pp.py  test_results.py  test_v8log.py
prompts/: README.md  common.md  common.minimal.md  common.minimal.tmpl.md  common.tmpl.md  knowledge_base.md  process_prompts.py
skills/: README.md
testing/: README.md
(+20 files in other folders)
