[project]
name = "v8-utils"
version = "0.1.0"
description = "CLI and MCP tools for V8 JavaScript engine developers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.0",
    "protobuf>=5.0",
    "httpx>=0.27",
    "mcp[cli]>=1.0",
    "requests>=2.32.5",
    "scipy>=1.13",
    "dateparser>=1.3.0",
    "numpy>=1.24",
    "ruptures>=1.1",
    "pandas>=2.0",
    "typer>=0.12",
    "rich>=13",
    "platformdirs>=4.0",
    "google-cloud-spanner>=3.63.0",
]

[project.scripts]
v8-mcp = "v8_utils.server:mcp.run"
pp = "v8_utils.pp:main"
jsb = "v8_utils.jsb:main"
pd = "v8_utils.pd.cli:app"
lv = "v8_utils.lv:main"
vt = "v8_utils.vt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/v8_utils"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
